tests/expectations/compiler/finalize/finalize_statement_incorrect_args_fail.out
Error [ETYC0372006]: Call expected `2` args, but got `3`
    --> compiler-test:7:24
     |
   7 |         return final { finalize_mint_public(receiver, amount, amount); };
     |                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
